--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -109,8 +109,11 @@ body {
 @layer utilities {
   .grid-background {
     @apply bg-gray-100; /* Light background */
-    background-image: 
-      linear-gradient(to right, rgba(0, 0, 0, 0.1) 1px, transparent 1px), 
+    background-image: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0.1) 1px,
+        transparent 1px
+      ),
       linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 1px, transparent 1px);
     background-size: 20px 20px; /* Adjust grid cell size here */
   }
